marriage edgelist complete
edgelist creation for marriages completed,
needs work on text and layout, but bones are all there and working

--- a/cohesionAndConflict_odkx/app/output/props/app.properties
+++ b/cohesionAndConflict_odkx/app/output/props/app.properties
@@ -11,4 +11,5 @@
 <entry key="common.change_google_account">true</entry>
 <entry key="common.font_size">16</entry>
 <entry key="common.change_splash_settings">true</entry>
+<entry key="tables.custom_home_screen">false</entry>
 </properties>
