--- a/cohesionAndConflict_odkx/app/output/props/device.properties
+++ b/cohesionAndConflict_odkx/app/output/props/device.properties
@@ -10,11 +10,11 @@
 
 <entry key="tables.tool_first_run"/>
 <entry key="survey.sort_order">sortByName</entry>
-<entry key="survey.tool_first_run">false</entry>
+<entry key="survey.tool_first_run"/>
 <entry key="scan.tool_first_run"/>
 <entry key="org.opendatakit.tables.list.sortbyorder">SORT_ASC</entry>
 <entry key="common.auth_credentials">none</entry>
-<entry key="common.initialization">2020-10-21T00:14:38.179000000</entry>
+<entry key="common.initialization">2020-10-21T22:10:55.873000000</entry>
 <entry key="common.username"/>
-<entry key="survey.tool_version_code">238</entry>
+<entry key="survey.tool_version_code"/>
 </properties>
