--- a/cohesion_conflict_clean-ODKX/app/output/props/app.properties
+++ b/cohesion_conflict_clean-ODKX/app/output/props/app.properties
@@ -3,7 +3,7 @@
 <properties>
 <entry key="common.show_splash">true</entry>
 <entry key="common.change_auth_credentials">true</entry>
-<entry key="common.sync_server_url">https://opendatakit-simpledemo.appspot.com</entry>
+<entry key="common.sync_server_url">https://odkx.varaine.gen.nz/</entry>
 <entry key="common.change_sync_server">true</entry>
 <entry key="common.change_font_size">true</entry>
 <entry key="common.splash_path">ODK Default</entry>
