--- a/ccSocial/pubspec.yaml
+++ b/ccSocial/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
   cupertino_icons: ^1.0.0
   path: ^1.7.0
   sqflite: ^1.3.2+1
+  path_provider: ^1.6.27
+  ext_storage: ^1.0.3
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -27,31 +30,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/db/
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - assets/
+# TODO: Need to programatically add assets here, because there are going to be a LOT of photos in sub directories... 
